--- a/.github/workflows/update_svg.yml
+++ b/.github/workflows/update_svg.yml
@@ -15,10 +15,10 @@ jobs:
           python-version: '3.9'
       - name: Install dependencies
         run: pip install requests
-      - name: Fetch data and generate SVG
-        run: |
-          python scripts/fetch_data.py
-          python scripts/generate_svg.py
+      - name: Fetch data 
+        run: python scripts/fetch_data.py
+      - name: Generate SVG
+        run: python scripts/generate_svg.py
       - name: Commit and push changes
         run: |
           git config --local user.name "${{ vars.USER_EMAIL }}"
