--- a/.github/workflows/update_svg.yml
+++ b/.github/workflows/update_svg.yml
@@ -24,7 +24,7 @@ jobs:
           git config --local user.name "${{ vars.USER_EMAIL }}"
           git config --local user.email "${{ vars.USER_NAME }}"
           git status
-          git add assets/terminal.svg
+          git add .
           git status
           git commit -m "Update terminal SVG"
           git push
